<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.szopen.loancompanyapp.Calculator">

    <TextView
        android:id="@+id/loan_value_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_loan_value_tv"
        android:textAlignment="center"
        android:layout_margin="@dimen/def_margin_calc"/>

    <EditText
        android:id="@+id/loan_value_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@+id/loan_value_tv"
        android:layout_centerHorizontal="true"
        android:inputType="numberDecimal"
        android:minWidth="@dimen/min_input_width"
        android:hint="@string/loan_value_et_hint"/>

    <TextView
        android:id="@+id/rate_number_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loan_value_et"
        android:text="@string/rate_number_tv"
        android:textAlignment="center"
        android:layout_margin="@dimen/def_margin_calc"/>

    <SeekBar
        android:id="@+id/rate_number_sb"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/def_margin_calc"
        android:layout_marginRight="@dimen/def_margin_calc"
        android:layout_height="wrap_content"
        android:layout_below="@id/rate_number_tv"
        android:max="119"
        android:min="0"
        android:progress="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/rate_number_sb"
        android:layout_marginLeft="@dimen/def_margin_calc"
        android:layout_below="@+id/rate_number_sb"
        android:text="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/rate_number_sb"
        android:layout_marginRight="@dimen/def_margin_calc"
        android:layout_below="@+id/rate_number_sb"
        android:text="120" />

    <TextView
        android:id="@+id/rate_number_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/rate_number_sb"
        android:text="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rate_number_value"
        android:layout_margin="@dimen/def_margin_calc"
        android:text="@string/select_location_tv"
        android:textAlignment="center"
        android:id="@+id/select_location_on_calc_tv" />

    <Button
        android:id="@+id/go_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_location_on_calc_tv"
        android:layout_centerHorizontal="true"
        android:onClick="changeActivityToMap"
        android:text="@string/select_location_button" />

    <RelativeLayout
        android:id="@+id/calculation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/go_map_button"
        android:layout_alignBottom="@+id/go_map_button"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/transport_cost_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/transport_cost" />

        <TextView
            android:id="@+id/transport_cost_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/transport_cost_tv"
            android:layout_centerHorizontal="true"
            android:text="@string/transport_cost" />

        <TextView
            android:id="@+id/percentage_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/transport_cost_value_tv"
            android:text="@string/total_percentage" />

        <TextView
            android:id="@+id/percentage_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/percentage_tv"
            android:text="@string/total_percentage" />

        <TextView
            android:id="@+id/total_credit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/percentage_value_tv"
            android:text="@string/total_credit_tv" />

        <TextView
            android:id="@+id/total_credit_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/total_credit_tv"
            android:text="@string/total_percentage" />

        <TextView
            android:id="@+id/rrso_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/total_credit_value_tv"
            android:text="@string/rrso_value_tv" />

        <TextView
            android:id="@+id/rrso_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/rrso_tv"
            android:text="@string/total_percentage" />

        <Button
            android:id="@+id/exit_calc_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/def_margin_calc"
            android:background="@android:color/holo_green_light"
            android:onClick="takeLoan"
            android:text="Take" />

        <Button
            android:id="@+id/take_loan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/def_margin_calc"
            android:background="@color/opaque_red"
            android:onClick="resign"
            android:text="Resign" />
    </RelativeLayout>


</RelativeLayout>
